# mygo-management

./: .env.example  .gitignore  CMakeLists.txt  Dockerfile  Makefile  README-CN.md  README.md  build.sh  clear.sh  test.sh
cmake/: common.cmake
protos/: transaction.proto
scripts/: build.sh  build_grpc.sh  test.sh
src/: CMakeLists.txt  config.h  logger.h  main.cpp  middleware.h  routes.h  tool.cpp  tool.h  utils.cpp  utils.h
src/grpc/: client.h  transaction.cpp  transaction.h
src/grpc_client/: CMakeLists.txt  client.h  transaction.cpp  transaction.h
src/http/: CMakeLists.txt  context.h  endpoint.cpp  endpoint.h  http_code.h  http_request.h  http_response.h  http_server.cpp  http_server.h  http_utils.cpp  http_utils.h  kori.cpp  kori.h  kori_http.cpp  kori_http.h  protocol.cpp  protocol.h  router.h  status_code.h  tcp_server.cpp  tcp_server.h  utils.cpp  utils.h
src/http/old/: context.h  http_response.h  http_server.cpp  http_server.h  logger.h
src/logger/: CMakeLists.txt  log.cpp  log.h
src/thread_pool/: CMakeLists.txt  thread_pool.cpp  thread_pool.h
src/utils/: CMakeLists.txt  assert.h  base64.cpp  base64.h  singleton.h  string_utils.cpp  string_utils.h
tests/: CMakeLists.txt  test_http.cpp  test_utils.cpp
www/: index.html  login.html
www/assets/: index-CW1Nwql8.js  index-DQmvoCNQ.css
